fancy button commit

--- a/app/views/levels/00_primary_button.html.erb
+++ b/app/views/levels/00_primary_button.html.erb
@@ -7,5 +7,14 @@
 <style>
 
   /* Add your CSS here */
+  .fancy-button {
+    background-color: blue;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+  }
 
 </style>
